Add Test Tool Window Factory